Added changes according the review 3